<resources>
    <string name="app_name">BAC Calculator</string>
    <string name="action_settings">Settings</string>

    <string name="textViewWeight">Weight (lbs)</string>
    <string name="switchGender">Gender</string>
    <string name="btnSave">Save</string>
    <string name="textViewDrinkSize">Drink size</string>
    <string name="radioSize1">1 oz</string>
    <string name="radioSize2">5 oz</string>
    <string name="radioSize3">12 oz</string>
    <string name="textViewAlcohol">Alcohol %</string>
    <string name="textViewAlcoholPer">Current</string>
    <string name="btnAddDrink">Add Drink</string>
    <string name="btnReset">Reset</string>
    <string name="textViewLev">BAC Level : 0.00</string>
    <string name="textViewStatus">Your status :</string>
    <string name="textViewStatusVal">You are safe</string>
    <string name="textViewAlcPer">5% </string>
    <string name="title">BAC Calculator</string>

</resources>
